# teri

./: .env.example  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  ARCHITECTURE.md  Cargo.toml  README.md  TODO.md  deny.toml  rust-toolchain.toml
examples/: news.json  seed.txt  web_article.html
src/: config.rs  error.rs  lib.rs  llm.rs  logging.rs  main.rs
src/agent/: mod.rs
src/api/: mod.rs  streaming.rs
src/graph/: mod.rs
src/memory/: mod.rs
src/report/: mod.rs
src/seed/: mod.rs
src/sim/: mod.rs
templates/: agent_action.jinja  persona_gen.jinja
tests/: graph_integration_test.rs  memory_tests.rs
